fixed cloudinary http url and added settimeout to refresh the component and fixed the no wrap in my items

--- a/client/src/styles/_MyProfile.scss
+++ b/client/src/styles/_MyProfile.scss
@@ -28,6 +28,7 @@
     .my-items-sub-container{
         display: flex;
         flex-direction: column;
+        flex-wrap: wrap;
         .my-items-item-container{
             background-color: white;
             margin: 1rem;
